# DAT205-advanced-computer-graphics

./: .gitignore  Cargo.toml  Makefile  README.md
assets/shaders/: basic.vert  basic_410.vert  terrain.vert
src/: main.rs
src/core/: core.rs  event.rs  mod.rs
src/rendering/: camera.rs  colors.rs  deferred.rs  fxaa.rs  mod.rs  reader.rs  renderer.rs  skybox.rs  terrain.rs
src/support/: frame_clock.rs  logging.rs  mod.rs
src/ui/: console.rs  debug_info.rs  mod.rs  primitives.rs  text.rs
