[package]
name = "advgraphics"
version = "0.1.0"
authors = ["Johan Backman <johback@student.chalmers.se>"]

[dependencies]
alewife     = "0.0.2"
nalgebra    = "0.11"
conrod      = { version = "*", features = ["glium", "winit"] }
glium       = "0.16"
approx      = "0.1"
lazy_static = "0.1"
log         = "0.3"
time        = "0.1"
find_folder = "0.3"
image       = "0.12"
specs       = "0.7"
winit       = "0.5.9"
