[package]
name = "advgraphics"
version = "0.1.0"
authors = ["Johan Backman <johback@student.chalmers.se>"]

[dependencies]
alewife             = "*"
nalgebra            = "*"
conrod              = {version = "*", features = ["winit"]}
gfx_core            = "*"
gfx                 = "*"
gfx_device_gl       = "*"
gfx_window_glutin   = "*"
glutin              = "*"
approx              = "*"
lazy_static         = "*"
num_cpus            = "*"
genmesh             = "*"
log                 = "*"
time                = "*"
find_folder         = "*"
image               = "*"
specs               = "*"
